--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,4 @@ logging.level.root=WARN
 spring.main.banner-mode=off
 
 #spring.profiles.active = hibernate
-#Questa è la branch di Marco
+#Questa è la branch di Ravenclaw
