--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,16 +3,16 @@ spring:
     url: jdbc:postgresql://localhost:5432/library
     username: postgresMaster
     password: goPostgresGo
-    driver-class-name: org.postgresql.Driver  #?
+    driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
       ddl-auto: none
-    show-sql: false #true
+    show-sql: false
     properties:
       hibernate:
-        format_sql: true  #?
-    database: postgresql  #?
-    database-platform: org.hibernate.dialect.PostgreSQLDialect  #dialect:...
+        format_sql: true
+    database: postgresql
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
 
 application:
   security:
